<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_common_full"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/navigation_bar_common" >

        <TextView
            android:id="@+id/Register_cancle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/back_left"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/numberSize" />

        <TextView
            android:id="@+id/register_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/register_title"
            android:textColor="@color/white"
            android:textSize="@dimen/title_text_size" />

        <TextView
            android:id="@+id/register_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/verify"
            android:textColor="@drawable/btn_text_color"
            android:textSize="@dimen/numberSize" 
            android:layout_marginRight="@dimen/register_padding_right"
            android:clickable="true"
            android:onClick="verify"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_value1"
            android:layout_marginRight="@dimen/margin_value1"
            android:layout_marginTop="@dimen/prompt_layout_top_height"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/cssgscommonBlodTextView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:shadowColor="@color/white"
                android:shadowDx="0.0"
                android:shadowDy="1.0"
                android:shadowRadius="1.0"
                android:layout_gravity="center"
                android:text="@string/logon_msg_getcode"
                android:textColor="@color/description_text_color"
                android:textSize="@dimen/textSize_prot" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout7"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/every_layout_height"
            android:layout_marginLeft="@dimen/margin_value1"
            android:layout_marginRight="@dimen/margin_value1"
            android:layout_marginTop="7.0dip"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/phoneNumber_edit"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/every_layout_height"
                android:layout_marginLeft="7.0dip"
                android:layout_weight="1.0"
                android:background="@drawable/common_btn_bg"
                android:gravity="left|center"
                android:hint="@string/reg_hint_phonenumber"
                android:maxLength="18"
                android:paddingLeft="10.0dip"
                android:phoneNumber="true"
                android:text=""
                android:focusable="true"
                android:textColor="@color/black"
                android:textColorHint="@color/register_hint_color"
                android:textSize="@dimen/textSize_input" >
               
                <requestFocus />
            </EditText>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>